DEV-154 Hide home screen slider arrows on small screens through css (workaround for bug in which arrows do not hide on small screens).

--- a/cvast_arches/cvast_arches/media/css/plugins.css
+++ b/cvast_arches/cvast_arches/media/css/plugins.css
@@ -77,6 +77,10 @@
     height: 60vh;
   }
 
+  .flexslider .flex-direction-nav a {
+    display: none;
+  }
+
   #cvast-slideshow-image-3d-global-heritage {
     background-position: 85% 50% !important;
   }
